# gradmesh-simplification

./: .gitmodules  CMakeLists.txt  README.md
include/: curve.hpp  curve_renderer.hpp  fileio.hpp  gms_app.hpp  gms_appstate.hpp  gms_math.hpp  gradmesh.hpp  gui.hpp  merge_metrics.hpp  merge_select.hpp  merging.hpp  ostream_ops.hpp  patch.hpp  patch_renderer.hpp  preprocessing.hpp  renderer.hpp  shader.hpp  types.hpp  window.hpp
libs/glad/: glad.c  glad.h
meshes/: L.hemesh  apple.hemesh  avocado.hemesh  banana.hemesh  chestnut.hemesh  empty.hemesh  exp_3.hemesh  global-markers.hemesh  global_duck.hemesh  modifiedgr.hemesh  order3.hemesh  order4.hemesh  order5.hemesh  save_0.hemesh  save_1.hemesh  save_139.hemesh  save_140.hemesh  save_67.hemesh  save_81.hemesh  save_96.hemesh  save_97.hemesh  teardrop.hemesh  tree.hemesh  watermelon.hemesh
meshes/irrelevant/: U.hemesh  exp_1.hemesh  exp_2.hemesh  flame2.hemesh  order1.hemesh  order2.hemesh  save_1.hemesh  turtle.hemesh  yellowspots.hemesh
meshes/recoloring_meshes/: bezier-inactive-recolor-demo.hemesh  bezier-junction-recolor-demo.hemesh  bezier-recolor-demo.hemesh  continuity-c0.hemesh  continuity-c1.hemesh  continuity-discontinuous.hemesh  duck.hemesh  global-refinement.hemesh  global-tulips.hemesh  hermite-recolor-demo.hemesh  junction-recolor-demo.hemesh  local-refinement.hemesh  markers.hemesh  sharp-color-transition.hemesh  tulips.hemesh
shaders/: bezier.fs.glsl  bezier.tes.glsl  controlpt.vs.glsl  curve.tcs.glsl  curve.tes.glsl  curve.vs.glsl  line.fs.glsl  patch.fs.glsl  patch.tcs.glsl  patch.tes.glsl  patch.vs.glsl  point.fs.glsl  point.vs.glsl
src/: curve.cpp  curve_renderer.cpp  fileio.cpp  gms_app.cpp  gms_math.cpp  gradmesh.cpp  gui.cpp  main.cpp  merge_metrics.cpp  merge_select.cpp  merging.cpp  ostream_ops.cpp  patch.cpp  patch_renderer.cpp  preprocessing.cpp  renderer.cpp  shader.cpp  window.cpp
